--- a/templates/projects.html
+++ b/templates/projects.html
@@ -50,18 +50,13 @@
         </div>
         <div class="page-row-section">
             <div class="page-column-section">
-                <div class="selector-content">
-                    <div class="content default-mode">
-                        <p class="page-text"> Hello! My j is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
+                <a href="/andersonCodingClub">
+                    <div class="selector-content">
+                        <div class="content default-mode">
+                            <p class="page-text"> COding Club </p>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="page-column-section">
-                <div class="selector-content">
-                    <div class="content default-mode">
-                        <p class="page-text"> Hello! My j is Avery Allen and I am working on this website to hone my skills and share things about me! x  x xx x x x x x x x x x x x x x x x x x x x x x x x x x x x x c x x x x x x x x x x x x xx x x x  XX  X XX X X  X XX X X X X  X XX X  XX X X X X X X X X  x x x x  x xxx x    x x x xx x x x x x x x xxx x x x x xX XX X X x </p>
-                    </div>
-                </div>
+                </a>
             </div>
         </div>
     </main>
