--- a/static/css/IndividualProjects/andersonCodingClub.css
+++ b/static/css/IndividualProjects/andersonCodingClub.css
@@ -140,13 +140,12 @@ a {
 }
 
 .hidden-content {
-    display: none;
+    display: none
 }
 
 .hidden {
     display: none;
 }
-
 
 .no-scroll {
     overflow: hidden;
@@ -154,14 +153,12 @@ a {
 }
 
 @keyframes glow {
-    0% {box-shadow: inset 0 0 1000px 1000px rgb(255, 64, 64, 0.8); }
-    30% {box-shadow: inset 0 0 1000px 1000px rgb(255, 64, 64, 0.8);}
+    0% {box-shadow: inset 0 0 1000px 1000px rgb(238, 255, 3); }
+    30% {box-shadow: inset 0 0 1000px 1000px rgb(238, 255, 3);}
     100% { opacity: 1;
         box-shadow: none;}
     
 }
-
-
 
 #next-page-preview {
     position: fixed; /* Fixed position to ensure it stays within the viewport */
@@ -198,3 +195,5 @@ a {
 #input-blocker.active {
     pointer-events: all; /* Make it interactive */
 }
+
+
